test: add OrderService, DTO, and entity tests to reach ~90% coverage