@@ -12,7 +12,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -20,31 +19,27 @@ public class OrderService {
 
     @Autowired
     private OrderRepository orderRepository;
-    
+
     @Autowired
     private InventoryClient inventoryClient;
 
     public OrderResponse createOrder(OrderRequest request) {
-        // STEP 1: Validate stock for all items BEFORE creating order
         for (OrderItemRequest itemRequest : request.getItems()) {
             boolean hasStock = inventoryClient.checkStock(
-                itemRequest.getProductId(), 
+                itemRequest.getProductId(),
                 itemRequest.getQuantity()
             );
-            
             if (!hasStock) {
                 throw new InsufficientStockException(
                     "Insufficient stock for product " + itemRequest.getProductId()
                 );
             }
         }
-        
-        // STEP 2: Create order entity
+
         Order order = new Order();
         order.setCustomerId(request.getCustomerId());
         order.setStatus("PENDING");
 
-        // Map order items
         List<OrderItem> items = request.getItems().stream()
             .map(itemRequest -> {
                 OrderItem item = new OrderItem();
@@ -52,14 +47,12 @@ public class OrderService {
                 item.setQuantity(itemRequest.getQuantity());
                 return item;
             })
-            .collect(Collectors.toList());
+            .toList();
 
         order.setItems(items);
 
-        // STEP 3: Save order to database
         Order savedOrder = orderRepository.save(order);
 
-        // STEP 4: Reserve stock in inventory service
         for (OrderItemRequest itemRequest : request.getItems()) {
             inventoryClient.reserveStock(
                 itemRequest.getProductId(),
@@ -67,8 +60,7 @@ public class OrderService {
                 savedOrder.getId()
             );
         }
-        
-        // STEP 5: Update order status to CONFIRMED
+
         savedOrder.setStatus("CONFIRMED");
         Order confirmedOrder = orderRepository.save(savedOrder);
 
@@ -79,7 +71,6 @@ public class OrderService {
     public OrderResponse getOrderById(Long id) {
         Order order = orderRepository.findById(id)
             .orElseThrow(() -> new OrderNotFoundException("Order not found with ID: " + id));
-
         return mapToResponse(order);
     }
 
@@ -88,7 +79,7 @@ public class OrderService {
         List<Order> orders = orderRepository.findByCustomerId(customerId);
         return orders.stream()
             .map(this::mapToResponse)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private OrderResponse mapToResponse(Order order) {
@@ -108,7 +99,7 @@ public class OrderService {
                 itemResponse.setPrice(item.getPrice());
                 return itemResponse;
             })
-            .collect(Collectors.toList());
+            .toList();
 
         response.setItems(itemResponses);
         return response;
